--- a/templates/index.jade
+++ b/templates/index.jade
@@ -2,56 +2,89 @@
 html
 	head
 		title Crowdload
-		link(rel="stylesheet", href="vendor/bootstrap/css/bootstrap.css")
-		//- link(rel="stylesheet", href="vendor/bootstrap/css/bootstrap-theme.css")
-		style(type="text/css") .userscript { display: none }
+		//- link(href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/spacelab/bootstrap.min.css", rel="stylesheet")
+		link(href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/slate/bootstrap.min.css", rel="stylesheet")
+		style .userscript { display: none }
 	body
 		.container
 			.row
-				.col.col-md-12
+				.col-sm-9
 					h1 Crowdloader
 					#no-userscript.alert.alert-danger
 						p You need to install/enable the #[a(href="crowdload.userscripts.js") userscript].
+				.col-sm-3.userscript
+					.panel.panel-default#controls-container
+						.panel-body
+							button.btn.btn-default.btn-success.start Start
+							button.btn.btn-default.btn-danger.stop Stop
 			.row.userscript
-				.status
-					for status in statuses
-						span #{status}: 
-								code(id="status-#{status}")
+				.col-sm-12
+
+					.panel.panel-default#download
+						.panel-heading Download
+						.panel-body
+							div
+								span URI
+								span.uri --
+								span Downloaded 
+								span.bytesDownloaded --
+								span Total 
+								code.totalSize --
+							.progress
+								.progress-bar.progress-bar-success(
+									role="progressbar",
+									aria-valuenow="0",
+									aria-valuemin="0",
+									aria-valuemax="100",
+									style="width: 0%;")
+
+					.panel.panel-default#upload
+						.panel-heading Upload
+						.panel-body
+							div
+								span URI
+								span.uri --
+								span Uploaded 
+								span.bytesUploaded --
+								span Total
+								span.totalSize --
+							.progress
+								.progress-bar.progress-bar-danger(
+									role="progressbar",
+									aria-valuenow="0",
+									aria-valuemin="0",
+									aria-valuemax="100",
+									style="width: 0%;")
+
 			.row.userscript
-				.col.col-md-2
-					#controls-container
-						button.btn.btn-default.btn-success.start Start
-						button.btn.btn-default.btn-danger.stop Stop
-				.col.col-md-10
-					#download
-						h2 Download
-						div
-							span URI
-							code.uri --
-							span Downloaded 
-							code.bytesDownloaded --
-							span Total 
-							code.totalSize --
-						.progress
-							.progress-bar(
-								role="progressbar",
-								aria-valuenow="0",
-								aria-valuemin="0",
-								aria-valuemax="100",
-								style="width: 0%;")
-					#upload
-						h2 Upload
-						div
-							span URI
-							code.uri --
-							span Uploaded 
-							code.bytesUploaded --
-							span Total 
-							code.totalSize --
-						.progress
-							.progress-bar(
-								role="progressbar",
-								aria-valuenow="0",
-								aria-valuemin="0",
-								aria-valuemax="100",
-								style="width: 0%;")
+				.col-sm-3
+					.panel.panel-default
+						.panel-heading Client stats
+						.panel-body.status
+							table.table.table-condensed
+								tr
+									th(scope="row") State:
+									td
+										span.text-info.client-state STOPPED
+								tr
+									th Time To Next
+									td
+										span.text-info.client-time-remaining -1
+								tr
+									th Files Retrieved
+									td
+										span.text-info.client-files-retrieved -1
+								tr
+									th Bytes Retrieved
+									td
+										span.text-info.client-bytes-retrieved -1
+				.col-sm-3
+					.panel.panel-default
+						.panel-heading Server-wide stats
+						.panel-body.server-status
+							table.table.table-condensed
+								for status in statuses
+									tr
+										th(scope="row")= status
+										td
+											span(class="text-info status-#{status}") --
