User Script added

--- a/templates/index.jade
+++ b/templates/index.jade
@@ -11,7 +11,7 @@ html
 				.col-sm-9
 					h1 Crowdloader
 					#no-userscript.alert.alert-danger
-						p You need to install/enable the #[a(href="crowdload.userscripts.js") userscript].
+						p You need to install/enable the #[a(href="Crowdload.user.js") userscript].
 				.col-sm-3.userscript
 					.panel.panel-default#controls-container
 						.panel-body
