template: code -> span

--- a/templates/index.jade
+++ b/templates/index.jade
@@ -25,11 +25,11 @@ html
 						.panel-body
 							div
 								span URI
-								span.uri --
+								span.text.text-info.uri --
 								span Downloaded 
-								span.bytesDownloaded --
+								span.text.text-info.bytesDownloaded --
 								span Total 
-								code.totalSize --
+								span.text.text-info.totalSize --
 							.progress
 								.progress-bar.progress-bar-success(
 									role="progressbar",
@@ -43,11 +43,11 @@ html
 						.panel-body
 							div
 								span URI
-								span.uri --
+								span.text.text-info.uri --
 								span Uploaded 
-								span.bytesUploaded --
+								span.text.text-info.bytesUploaded --
 								span Total
-								span.totalSize --
+								span.text.text-info.totalSize --
 							.progress
 								.progress-bar.progress-bar-danger(
 									role="progressbar",
