Productive version, fixes #1

--- a/templates/index.jade
+++ b/templates/index.jade
@@ -43,6 +43,7 @@ html
 				.col-sm-4
 					.panel.panel-default
 						.panel-heading Client stats
+							button.btn.btn-xs.btn-default.pull-right.clear-client-stats Clear
 						.panel-body.status
 							table.table.table-condensed
 								tr
